--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -1,15 +1,13 @@
 /* Autor: David Pérez Saché */
 
 /* FUENTES */
-@font-face
-{
+@font-face {
     font-family: "Roboto";
     src: url("../assets/Roboto/Roboto-Regular.ttf");
 }
 
 /* ELEMENTOS GENERALES */
-html
-{
+html {
     width: auto;
     height: auto;
     overflow-y: auto;
@@ -17,27 +15,19 @@ html
     min-height: 100%;
 }
 
-body
-{
+body {
     font-family: "Roboto";
     width: auto;
     height: auto;
     margin: 0 auto;
 }
 
-table
-{
+table {
     margin: auto;
     text-align: center;
 }
 
-span.material-icons
-{
-    vertical-align: middle;
-}
-
-footer
-{
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
@@ -45,158 +35,7 @@ footer
     background-color: #EA983B;
 }
 
-footer img#imgFooter
-{
-    width: 90px;
-    height: 80px;
-    display: block;
-    margin: auto;
-    padding: 10px 0;
-}
-
-footer img#imgAccesibilidad
-{
-    display: block;
-    margin: auto;
-    width: 192px;
-    height: 72px;
-}
-
-::placeholder 
-{
-    color: black;
-    opacity: 1;
-}
-
-/* IDs */
-img#imgLogo 
-{
-    width: 192px;
-    padding-left: 20px;
-    padding-top: 5px;
-    vertical-align: middle;
-}
-
-div#divBusqueda
-{
-    display: inline-block;
-}
-
-div#divCabecera
-{
-    text-align: center;
-    background-color: #EA983B;
-    padding-bottom: 5px;
-}
-
-div#divBusqueda input
-{
-    height: 28px;
-    width: 350px;
-    margin-right: 0;
-    border: 1px solid #ADACAC;
-    border-radius: 0px;
-    vertical-align: middle;
-}
-
-div#divBusqueda button
-{
-    height: 32px;
-    vertical-align: middle;
-    background-color: #FFFFFF;
-    border: 1px solid #ADACAC;
-    border-radius: 0px;
-}
-
-div#divBotones
-{
-    display: inline-block;
-    padding-left: 15px;
-}
-
-div#divBotones button
-{
-    height: 50px;
-    background-color: #FFFFFF;
-    border: 1px solid #ADACAC;
-    border-radius: 10px;
-}
-
-div#divBotones button:hover
-{
-    background-color: #f3f3f3;
-}
-
-div#divBotones button:active
-{
-    background-color: #e9e9e9;
-}
-
-label#labelBuscar
-{
-    margin-left: 20px;
-}
-
-div#divListado,
-div#divAlta,
-div#divModificar
-{
-    margin-bottom: 120px;
-}
-
-p#pTotal
-{
-    text-align: center;
-    margin-bottom: 50px;
-}
-
-div#divListado p
-{
-    padding-left: 10px;
-}
-
-span#spanTotal
-{
-    font-weight: bold;
-    color: #a00000;
-}
-
-div#divAlta,
-div#divModificar
-{
-    margin-top: 100px;
-}
-
-div#divBotonesForm
-{
-    text-align: center;
-}
-
-div#divBotonesForm button
-{
-    background-color: white;
-    border: 1px solid #ADACAC;
-    border-radius: 5px;
-    padding: 5px;
-}
-
-div#divBotonesForm button:hover
-{
-    background-color: #f3f3f3;
-}
-
-div#divBotonesForm button:active
-{
-    background-color: #e9e9e9;
-}
-
-img#imgAccesibilidad
-{
-
-}
-
-form
-{
+form {
     width: 550px;
     margin: auto;
     margin-top: 10px;
@@ -207,23 +46,20 @@ form
     border-radius: 15px;
 }
 
-select
-{
+select {
     display: block;
-    margin: auto;
     background-color: white;
     border: 1px solid #ADACAC;
     border-radius: 5px;
     padding: 5px;
+    margin-bottom: 10px;
 }
 
-input
-{
+input {
     font-family: "Roboto";
 }
 
-textarea
-{
+textarea {
     resize: none;
     font-family: "Roboto";
 }
@@ -232,76 +68,240 @@ form input[type="text"],
 form input[type="number"], 
 form input[type="date"], 
 form input[type="file"],
-textarea
-{
+textarea {
     width: 400px;
-    display: block;
-    margin: auto;
-    margin-top: 10px;
     padding: 5px;
+    margin-bottom: 10px;
+    display: block;
     border: 1px solid #ADACAC;
 }
 
-form label
-{
-    display: block;
-}
-
-fieldset
-{
+fieldset {
     margin: 10px 0;
-    background-color: rgb(251, 251, 255);
+    background-color: white;
 }
 
-form input[type="file"]
-{
+form input[type="file"] {
     border: 0;
     width: 275px;
 }
 
+::placeholder {
+    color: black;
+    opacity: 1;
+}
+
+/* IDs */
+img#imgLogo {
+    width: 192px;
+    padding-left: 20px;
+    padding-top: 5px;
+    vertical-align: middle;
+}
+
+footer img#imgFooter {
+    width: 90px;
+    height: 80px;
+    display: block;
+    margin: auto;
+    padding: 10px 0;
+}
+
+footer img#imgAccesibilidad {
+    display: block;
+    margin: auto;
+    width: 192px;
+    height: 72px;
+}
+
+div#divBusqueda {
+    display: inline-block;
+}
+
+div#divCabecera {
+    text-align: center;
+    background-color: #EA983B;
+    padding-bottom: 5px;
+}
+
+div#divBusqueda input {
+    height: 28px;
+    width: 350px;
+    margin-right: 0;
+    border: 1px solid #ADACAC;
+    border-radius: 0px;
+    vertical-align: middle;
+}
+
+div#divBusqueda button {
+    height: 32px;
+    vertical-align: middle;
+    background-color: #FFFFFF;
+    border: 1px solid #ADACAC;
+    border-radius: 0px;
+}
+
+div#divBotones {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+div#divBotones button {
+    height: 35px;
+    background-color: #FFFFFF;
+    border: 1px solid #ADACAC;
+    margin-right: 15px;
+    border-radius: 10px;
+}
+
+div#divBotones button:hover {
+    background-color: #f3f3f3;
+}
+
+div#divBotones button:active {
+    background-color: #e9e9e9;
+}
+
+label#labelBuscar {
+    margin-left: 20px;
+}
+
+div#divListado,
+div#divAlta,
+div#divModificar {
+    margin-bottom: 250px;
+}
+
+p#pTotal {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+div#divListado p {
+    padding-left: 10px;
+}
+
+span#spanTotal {
+    font-weight: bold;
+    color: #a00000;
+}
+
+div#divAlta,
+div#divModificar {
+    margin-top: 100px;
+}
+
+div#divBotonesForm {
+    text-align: center;
+}
+
+div#divBotonesForm button {
+    background-color: white;
+    border: 1px solid #ADACAC;
+    border-radius: 5px;
+    padding: 5px;
+}
+
+div#divBotonesForm button:hover {
+    background-color: #f3f3f3;
+}
+
+div#divBotonesForm button:active {
+    background-color: #e9e9e9;
+}
+
+label.labelCheckbox {
+    display: block;
+}
+
 /* CLASES */
-div.divItem
-{
+span.material-icons {
+    vertical-align: middle;
+}
+
+div.divItem {
     text-align: center;
     margin-bottom: 30px;
 }
 
-.divItem img
-{
+div.divItem img {
     width: 256px;
     height: 256px;
     display: block;
     margin: auto;
 }
 
-p.pPrecioItem
-{
+p.pPrecioItem {
     font-weight: bold;
     color: #a00000;
     font-size: larger;
 }
 
-p.pNombreItem
-{
+p.pNombreItem {
     font-weight: bold;
 }
 
-div.divDescItem
-{
+div.divDescItem {
     text-align: justify;
     width: 40%;
     margin: auto;
 }
 
-hr.hrItems
-{
+hr.hrItems {
     border: 0;
     height: 1px;
     background: linear-gradient(90deg, rgba(255,255,255,0) 0%, rgba(173,172,172,1) 15%, rgba(173,172,172,1) 50%, rgba(173,172,172,1) 85%, rgba(173,172,172,0) 100%);
 }
 
-span.spanFecha
-{
+span.spanFecha {
     text-decoration: underline;
+}
+
+/* MEDIA QUERY MÓVIL */
+@media (max-width:750px) {
+    img#imgLogo {
+        padding-left: 0;
+        margin-bottom: 20px;
+    }
+
+    div#divBusqueda {
+        display: block;
+    }
+
+    label#labelBuscar {
+        text-align: left;
+    }
+
+    label#labelBuscar {
+        margin: 0;
+    }
+
+    button#buttonModificar {
+        margin-right: 0 !important;
+    }
+
+    button#buttonListado span,
+    button#buttonAlta span,
+    button#buttonModificar span {
+        display: none;
+    }
+
+    div.divDescItem {
+        width: 80%;
+    }
+
+    form#formAlta,
+    form#formModificar {
+        width: 80%;
+    }
+
+    form input[type="text"], 
+    form input[type="number"], 
+    form input[type="date"], 
+    form input[type="file"],
+    textarea {
+        width: 90%;
+    }
 }
 
