--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -91,8 +91,9 @@ form input[type="file"] {
 
 img#imgLogo {
     width: 192px;
-    padding-left: 20px;
-    padding-top: 5px;
+    margin-left: 20px;
+    margin-top: 5px;
+    margin-bottom: 20px;
     vertical-align: middle;
 }
 
@@ -257,7 +258,7 @@ span.spanFecha {
 /* MEDIA QUERY MÓVIL */
 @media (max-width:750px) {
     img#imgLogo {
-        padding-left: 0;
+        margin-left: 0;
         margin-bottom: 20px;
     }
 
