--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -171,6 +171,12 @@ div#divModificar {
     margin-bottom: 250px;
 }
 
+div#divAlta p{
+    display: block;
+    text-align: center;
+    display: none;
+}
+
 p#pTotal {
     text-align: center;
     margin-bottom: 50px;
@@ -187,7 +193,7 @@ span#spanTotal {
 
 div#divAlta,
 div#divModificar {
-    margin-top: 100px;
+    margin-top: 70px;
 }
 
 div.divBotonesForm {
