--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -171,7 +171,7 @@ div#divModificar {
     margin-bottom: 250px;
 }
 
-div#divAlta p{
+p.pAviso{
     display: block;
     text-align: center;
     display: none;
