--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -29,7 +29,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 200px;
+    height: 140px;
     background-color: #EA983B;
 }
 
@@ -46,6 +46,7 @@ form {
 
 select {
     display: block;
+    width: 400px;
     background-color: white;
     border: 1px solid #ADACAC;
     border-radius: 5px;
@@ -105,11 +106,9 @@ footer img#imgFooter {
     padding: 10px 0;
 }
 
-footer img#imgAccesibilidad {
-    display: block;
+footer p {
     margin: auto;
-    width: 192px;
-    height: 72px;
+    text-align: center;
 }
 
 div#divBusqueda {
@@ -169,7 +168,7 @@ div#divListado,
 div#divAlta,
 div#divModificar {
     margin-top: 20px;
-    margin-bottom: 250px;
+    margin-bottom: 180px;
 }
 
 p.pAviso{
@@ -304,6 +303,7 @@ span.spanFecha {
     form input[type="number"], 
     form input[type="date"], 
     form input[type="file"],
+    select,
     textarea {
         width: 90%;
     }
