--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -33,6 +33,14 @@ footer {
     background-color: #EA983B;
 }
 
+ul {
+    padding-left: 0;
+}
+
+li {
+    margin-bottom: 5px;
+}
+
 form {
     width: 550px;
     margin: auto;
