--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -29,7 +29,7 @@ footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 140px;
+    height: auto;
     background-color: #EA983B;
 }
 
