--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -114,6 +114,11 @@ button.boton:active {
     background-color: #e9e9e9;
 }
 
+p#pTiempo {
+    white-space: pre-line;
+    margin-top: 10px;
+}
+
 img#imgLogo {
     width: 192px;
     margin-left: 20px;
