--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -117,6 +117,7 @@ button.boton:active {
 p#pTiempo {
     white-space: pre-line;
     margin-top: 10px;
+    padding: 0 10px;
 }
 
 img#imgLogo {
@@ -209,7 +210,7 @@ div#divListado,
 div#divAlta,
 div#divModificar {
     margin-top: 20px;
-    margin-bottom: 180px;
+    margin-bottom: 450px;
 }
 
 p.pAviso{
@@ -238,6 +239,7 @@ div#divModificar {
 
 div.divBotonesForm {
     text-align: center;
+    margin-top: 20px;
 }
 
 div.divBotonesForm button {
