--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -114,7 +114,7 @@ button.boton:active {
     background-color: #e9e9e9;
 }
 
-div#divTiempo {
+p#pTiempo {
     white-space: pre-line;
     margin-top: 10px;
     padding: 0 10px;
