--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -20,6 +20,52 @@ body {
     margin: 0 auto;
 }
 
+div.cookieContainer {
+    width: 100%;
+    margin: auto;
+}
+
+div.cookieSubcontainer {
+    width: 85%;
+    margin: auto;
+}
+
+div#divCookies {
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    color: white;
+    background-color: black;
+    z-index: 1;
+}
+
+div.cookies {
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+div.cookies a {
+    color: yellow;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+button.buttonCookie {
+    border-radius: 5px;
+    padding: 8px 12px 8px 12px;
+    margin-bottom: 10px;
+    font-size: 1rem;
+    font-family: inherit;
+    cursor: pointer;
+    border: 3px solid white;
+    background-color: black;
+    color: white;
+}
+
 table {
     margin: auto;
     text-align: center;
@@ -112,6 +158,34 @@ button.boton:hover {
 
 button.boton:active {
     background-color: #e9e9e9;
+}
+
+div#divAvisosLegales {
+    padding: 5px 20px;
+}
+
+div#divAvisosLegales ul {
+    padding-left: inherit;
+}
+
+div#divAvisosLegales li {
+    margin-bottom: inherit;
+}
+
+div#divLegalidad {
+    text-align: center;
+    margin: 20px 0;
+}
+
+div#divLegalidad p a {
+    color: black;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+div#divLegalidad p a:hover {
+    color: crimson;
+    text-decoration: underline;
 }
 
 p#pTiempo {
