--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -37,7 +37,6 @@ div#divCookies {
     color: white;
     background-color: black;
     z-index: 1;
-    display: none;
 }
 
 div.cookies {
@@ -299,9 +298,9 @@ div#divBotones button:active {
     background-color: #e9e9e9;
 }
 
-div#divListado,
-div#divAlta,
-div#divModificar {
+div#divListado div#divL,
+div#divAlta div#divA,
+div#divModificar div#divM {
     margin-top: 20px;
     margin-bottom: 600px;
 }
