--- a/src/www/css/styles.css
+++ b/src/www/css/styles.css
@@ -54,6 +54,10 @@ div.cookies a {
     text-decoration: none;
 }
 
+div.cookies a:active {
+    color: orange;
+}
+
 button.buttonCookie {
     border-radius: 5px;
     padding: 8px 12px 8px 12px;
@@ -65,6 +69,16 @@ button.buttonCookie {
     border: 3px solid white;
     background-color: black;
     color: white;
+}
+
+button.buttonCookie:hover {
+    border: 3px solid yellow;
+    color: yellow;
+}
+
+button.buttonCookie:active {
+    border: 3px solid orange;
+    color: orange;
 }
 
 table {
@@ -277,25 +291,35 @@ button#botonBorrar:hover {
     background-color: rgb(200, 0, 0);
 }
 
-div#divBotones {
+div#divBotones div {
     display: flex;
     justify-content: center;
+    flex-direction: row;
     margin-top: 20px;
 }
 
-div#divBotones button {
+div#divBotones div button {
     height: 35px;
+    max-width: 180px;
+    flex-grow: 2;
+    flex-shrink: 2;
     background-color: #FFFFFF;
     border: 1px solid #ADACAC;
     margin-right: 15px;
     border-radius: 10px;
 }
 
-div#divBotones button:hover {
+img.imgComponente {
+    width: 256px; 
+    height: 256px; 
+    display: block;
+}
+
+div#divBotones div button:hover {
     background-color: #f3f3f3;
 }
 
-div#divBotones button:active {
+div#divBotones div button:active {
     background-color: #e9e9e9;
 }
 
